# sortfiles

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  sortfiles.py
sortfiles/: __main__.py  cli.py  core.py  sortfiles.py
src/: __main__.py  sortfiles.py
src/sortfiles/: cli.py  core.py
