[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sortfiles"
version = "0.1.0"
description = ""
authors = ["Etienne Landuré <25793763+etiennelndr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
loguru = "0.7.2"
click = "8.1.7"

[tool.poetry.group.dev.dependencies]
black = "23.10.1"
isort = "5.12.0"
autoflake = "2.2.1"
pre-commit = "3.5.0"

[tool.poetry.scripts]
sortfiles = "sortfiles.__main__:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.black]
line-length=100
