[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sortfiles"
version = "0.1.0"
description = ""
authors = ["Etienne Landuré <25793763+etiennelndr@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "sortfiles", from = "src" }
]

[tool.poetry.dependencies]
python = "~3.12"
loguru = "0.7.3"
click = "8.1.8"
tqdm = "4.67.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.9.9"
mypy = "1.15.0"
pre-commit = "4.1.0"
types-tqdm = "4.67.0.20250301"

[tool.poetry.scripts]
sortfiles = "sortfiles.__main__:main"

[tool.mypy]
files = ["src/sortfiles"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # Pylint
    "PL"
]

